add script